name:                system-environment-typed
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexandersgreen/system-environment-typed#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander S. Green
maintainer:          alexander.s.green@gmail.com
copyright:           2019 Alexander S. Green
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Environment.Typed
  build-depends:       base >= 4.7 && < 5, template-haskell, text
  default-language:    Haskell2010
  other-modules:       System.Environment.Typed.Internal

executable system-environment-typed-example
  hs-source-dirs:      examples
  main-is:             Example.hs
  default-language:    Haskell2010
  build-depends:       base
                     , system-environment-typed

source-repository head
  type:     git
  location: https://github.com/alexandersgreen/system-environment-typed
